crates/bevy_naga_oil/src/compose/tests/invalid_identifiers/fn.wgsl
#define_import_path fns

fn fine(in: f32) -> f32 {return in;}
fn bad_(in: f32) -> f32 {return in;}
